# course_work-sudoku

./: .dockerignore  Dockerfile  README.md
backend/: requirements.txt  sudoku_games.db
backend/app/: main.py
backend/app/api/: game_routes.py
backend/app/core/: game_manager.py
backend/app/services/: database.py  pdf_generator.py  report_generator.py
backend/cpp_module/: test_cpp.py
cpp_core/: CMakeLists.txt
cpp_core/include/: board.h  generator.h  solver.h
cpp_core/pybind/: bindings.cpp
cpp_core/src/: board.cpp  generator.cpp  solver.cpp
frontend/: README.md
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: sudokuApi.js
frontend/src/components/Board/: Board.css  Board.jsx
frontend/src/components/Cell/: Cell.css  Cell.jsx
frontend/src/components/Controls/: Controls.css  Controls.jsx
frontend/src/components/context/: GameContext.jsx  GameProvider.jsx
